# text-gpt-rust

./: Cargo.toml  README.md
src/: main.rs
